Changes in the form of dist and the view
