# src/controller/mensajes.ts
@@ -3,7 +3,7 @@ import { getMessages } from "../api/messages";
 
 
 export const chat =async(req:Request, res:Response)=>{
-    res.render('main', {data: req.session.dataUser})
+    res.render('chat', {data: req.session.dataUser})
 }
 // HACER PARA QUE SE PUEDA  ACEDER A LA RUTA CART SIN AUTHORIZACION SIEMPRE QUE ESTES LOGEADO
 // PODER VER EL CART EN NORMAL 
